fix drag and drop (z-index problem)

--- a/src/components/AlignmentFileLoader.scss
+++ b/src/components/AlignmentFileLoader.scss
@@ -8,7 +8,7 @@
   position: fixed;
   width: 100%;
   height: 100%;
-  //: 2000;
+  z-index: 2000;
   top: 0; 
   bottom: 0; 
   left: 0; 
